z-index modal issue solved

--- a/src/stramash/index.css
+++ b/src/stramash/index.css
@@ -247,6 +247,7 @@ body {
   top: 0;
   left: 0;
   align-items: center;
+  z-index: 3;
 }
 
 .stram-modal-return-button {
